kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: grpc-quickstart
  "annotations": { linkerd.io/inject: enabled }
